--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,17 +9,17 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="test/bootstrap.php"
+         bootstrap="Tests/bootstrap.php"
 >
   <testsuites>
     <testsuite name="Eden Template Test Suite">
-      <directory>./test/Eden/Tests/Template</directory>
+      <directory>./Tests/Template</directory>
     </testsuite>
   </testsuites>
 
   <filter>
     <whitelist>
-      <directory suffix=".php">./library/Eden/Template/</directory>
+      <directory suffix=".php">./</directory>
     </whitelist>
   </filter>
 </phpunit>
